Redirect all JBoss logs to stdout/single file

--- a/cartridges/openshift-origin-cartridge-jbossas/bin/control
+++ b/cartridges/openshift-origin-cartridge-jbossas/bin/control
@@ -294,7 +294,7 @@ function start() {
   if isrunning; then
       echo "Application is already running"
   else    
-    ${JBOSSAS_BIN_DIR}/standalone.sh > ${OPENSHIFT_TMP_DIR}/${cartridge_type}.log 2>&1 &
+    ${JBOSSAS_BIN_DIR}/standalone.sh &> >(/usr/bin/openshift-logger) &
     PROCESS_ID=$!
     echo "$PROCESS_ID" > ${JBOSSAS_PID_FILE}
 
