--- a/cartridges/openshift-origin-cartridge-jbossas/versions/7/standalone/configuration/logging.properties
+++ b/cartridges/openshift-origin-cartridge-jbossas/versions/7/standalone/configuration/logging.properties
@@ -29,7 +29,7 @@ logger.org.jboss.as.config.level=DEBUG
 # Root logger level
 logger.level=${jboss.boot.server.log.level:INFO}
 # Root logger handlers
-logger.handlers=FILE,CONSOLE
+logger.handlers=CONSOLE
 
 # Console handler configuration
 handler.CONSOLE=org.jboss.logmanager.handlers.ConsoleHandler
@@ -39,12 +39,12 @@ handler.CONSOLE.autoFlush=true
 handler.CONSOLE.formatter=PATTERN
 
 # File handler configuration
-handler.FILE=org.jboss.logmanager.handlers.FileHandler
-handler.FILE.level=DEBUG
-handler.FILE.properties=autoFlush,fileName
-handler.FILE.autoFlush=true
-handler.FILE.fileName=${org.jboss.boot.log.file:boot.log}
-handler.FILE.formatter=PATTERN
+#handler.FILE=org.jboss.logmanager.handlers.FileHandler
+#handler.FILE.level=DEBUG
+#handler.FILE.properties=autoFlush,fileName
+#handler.FILE.autoFlush=true
+#handler.FILE.fileName=${org.jboss.boot.log.file:boot.log}
+#handler.FILE.formatter=PATTERN
 
 # Formatter pattern configuration
 formatter.PATTERN=org.jboss.logmanager.formatters.PatternFormatter
