--- a/cartridges/openshift-origin-cartridge-python/usr/versions/shared/bin/control
+++ b/cartridges/openshift-origin-cartridge-python/usr/versions/shared/bin/control
@@ -19,14 +19,14 @@ export APPDIR=$OPENSHIFT_PYTHON_DIR
 
 function start_app() {
     cd "$OPENSHIFT_REPO_DIR"
-    nohup python -u app.py > "$OPENSHIFT_PYTHON_DIR/logs/appserver.log" 2>&1 &
+    nohup python -u app.py >> "$OPENSHIFT_PYTHON_DIR/logs/cart.log" 2>&1 &
     echo $! > $OPENSHIFT_PYTHON_DIR/run/appserver.pid
 }
 
 function start_apache() {
     write_httpd_passenv $HTTPD_PASSENV_FILE
     ensure_valid_httpd_process "$HTTPD_PID_FILE" "$HTTPD_CFG_FILE"
-    eval "/usr/sbin/httpd $HTTPD_CMD_CONF -k start"
+    eval "nohup /usr/sbin/httpd $HTTPD_CMD_CONF -k start -DFOREGROUND &> >(/usr/bin/openshift-logger) &"
     [ "$?" == "0" ] && wait_for_pid_file $HTTPD_PID_FILE
 }
 
