--- a/cartridges/openshift-origin-cartridge-nodejs/bin/control
+++ b/cartridges/openshift-origin-cartridge-nodejs/bin/control
@@ -60,7 +60,7 @@ function start() {
   if use_npm; then
     echo "*** NodeJS supervisor is disabled due to .openshift/markers/use_npm"
     echo "*** Starting application using: $node_cmd"
-    nodejs_context "nohup $node_cmd >> $logf 2>&1 &"
+    nodejs_context "nohup $node_cmd |& /usr/bin/logshifter -tag nodejs &"
   else
     # Users are allowed to use OPENSHIFT_NODEJS_WATCH env to specify
     # comma-delimited list of folders or js files to watch for changes.
@@ -71,7 +71,7 @@ function start() {
       echo "//$(date +%s)" > ${OPENSHIFT_NODEJS_WATCHDIR}/watcher.js
       supervisor_watch_opts="--watch ${OPENSHIFT_NODEJS_WATCHDIR}"
     fi
-    nodejs_context "nohup supervisor -e 'node|js|coffee' -p ${OPENSHIFT_NODEJS_POLL_INTERVAL:-10000} ${supervisor_watch_opts} -- $supervisor_opts >& $logf &"
+    nodejs_context "nohup supervisor -e 'node|js|coffee' -p ${OPENSHIFT_NODEJS_POLL_INTERVAL:-10000} ${supervisor_watch_opts} -- $supervisor_opts |& /usr/bin/logshifter -tag nodejs &"
   fi
 
   retries=3
