--- a/cartridges/openshift-origin-cartridge-phpmyadmin/bin/control
+++ b/cartridges/openshift-origin-cartridge-phpmyadmin/bin/control
@@ -18,7 +18,7 @@ function start {
   echo "Starting PHPMyAdmin cartridge"
   write_httpd_passenv $HTTPD_PASSENV_FILE
   ensure_valid_httpd_process "$HTTPD_PID_FILE" "$HTTPD_CFG_FILE"
-  eval "/usr/sbin/httpd $HTTPD_CMD_CONF -k start"
+  eval "nohup /usr/sbin/httpd $HTTPD_CMD_CONF -D FOREGROUND |& /usr/bin/logshifter -tag phpmyadmin &"
 }
 
 function stop {
@@ -26,7 +26,7 @@ function stop {
   ensure_valid_httpd_process "$HTTPD_PID_FILE" "$HTTPD_CFG_FILE"
   if [ -f "$HTTPD_PID_FILE" ]; then
       httpd_pid=`cat "$HTTPD_PID_FILE" 2> /dev/null`
-      eval "/usr/sbin/httpd $HTTPD_CMD_CONF -k stop"
+      kill -WINCH $httpd_pid
       wait_for_stop $httpd_pid
   fi
 }
@@ -34,7 +34,8 @@ function stop {
 function restart {
   echo "Restarting PHPMyAdmin cartridge"
   write_httpd_passenv $HTTPD_PASSENV_FILE
-  eval "/usr/sbin/httpd $HTTPD_CMD_CONF -k restart"
+  httpd_pid=`cat "$HTTPD_PID_FILE" 2> /dev/null`
+  kill -HUP $httpd_pid
 }
 
 function status {
