--- a/cartridges/openshift-origin-cartridge-jbossas/bin/control
+++ b/cartridges/openshift-origin-cartridge-jbossas/bin/control
@@ -356,9 +356,9 @@ function reload() {
 
 # Clean up any log files
 function tidy() {
-  client_message "Emptying log dir: $OPENSHIFT_JBOSSAS_LOG_DIR"
+  client_message "Emptying jbossas logs in dir: $OPENSHIFT_LOG_DIR"
   shopt -s dotglob
-  rm -rf $OPENSHIFT_JBOSSAS_LOG_DIR/*
+  rm -rf $OPENSHIFT_LOG_DIR/jbossas*
   rm -rf $OPENSHIFT_JBOSSAS_DIR/standalone/tmp/*
 }
 
