--- a/cartridges/openshift-origin-cartridge-jbossews/bin/control
+++ b/cartridges/openshift-origin-cartridge-jbossews/bin/control
@@ -133,9 +133,9 @@ function threaddump() {
 
 # Clean up any log files
 function tidy() {
-  client_message "Emptying log dir: $OPENSHIFT_JBOSSEWS_LOG_DIR"
+  client_message "Emptying jbossews logs from dir: $OPENSHIFT_LOG_DIR"
   shopt -s dotglob
-  rm -rf $OPENSHIFT_JBOSSEWS_LOG_DIR/*
+  rm -rf $OPENSHIFT_LOG_DIR/jbossews*
   rm -rf $OPENSHIFT_JBOSSEWS_DIR/tmp/*
 }
 
