--- a/cartridges/openshift-origin-cartridge-phpmyadmin/bin/control
+++ b/cartridges/openshift-origin-cartridge-phpmyadmin/bin/control
@@ -52,9 +52,9 @@ function status {
 
 # Clean up any log files
 function tidy() {
-  client_message "Emptying log dir: $OPENSHIFT_PHPMYADMIN_LOG_DIR"
+  client_message "Emptying phpmyadmin logs in dir: $OPENSHIFT_LOG_DIR"
   shopt -s dotglob
-  rm -rf $OPENSHIFT_PHPMYADMIN_LOG_DIR/*
+  rm -rf $OPENSHIFT_PHPMYADMIN_LOG_DIR/phpmyadmin*
 }
 
 case "$1" in
