--- a/cartridges/openshift-origin-cartridge-python/usr/versions/shared/bin/control
+++ b/cartridges/openshift-origin-cartridge-python/usr/versions/shared/bin/control
@@ -113,9 +113,9 @@ function status() {
 
 # Clean up any log files
 function tidy() {
-    client_message "Emptying log dir: $OPENSHIFT_PYTHON_LOG_DIR"
+    client_message "Emptying python logs in dir: $OPENSHIFT_LOG_DIR"
     shopt -s dotglob
-    rm -rf $OPENSHIFT_PYTHON_LOG_DIR/*
+    rm -rf $OPENSHIFT_LOG_DIR/python*
 }
 
 function build() {
