--- a/cartridges/openshift-origin-cartridge-php/bin/control
+++ b/cartridges/openshift-origin-cartridge-php/bin/control
@@ -78,7 +78,7 @@ function status() {
 function tidy() {
     echo "Emptying php logs in dir: $OPENSHIFT_LOG_DIR"
     shopt -s dotglob
-    rm -rf $OPENSHIFT_PHP_LOG_DIR/php* || :
+    rm -rf $OPENSHIFT_LOG_DIR/php.log* || :
 }
 
 function build() {
