--- a/cartridges/openshift-origin-cartridge-diy/bin/control
+++ b/cartridges/openshift-origin-cartridge-diy/bin/control
@@ -43,7 +43,7 @@ function reload() {
 function tidy() {
   client_message "Emptying diy logs in dir: $OPENSHIFT_LOG_DIR"
   shopt -s dotglob
-  rm -rf $OPENSHIFT_LOG_DIR/diy*
+  rm -rf $OPENSHIFT_LOG_DIR/diy.log*
 }
 
 case "$1" in
