--- a/cartridges/openshift-origin-cartridge-jbossas/bin/control
+++ b/cartridges/openshift-origin-cartridge-jbossas/bin/control
@@ -358,7 +358,7 @@ function reload() {
 function tidy() {
   client_message "Emptying jbossas logs in dir: $OPENSHIFT_LOG_DIR"
   shopt -s dotglob
-  rm -rf $OPENSHIFT_LOG_DIR/jbossas*
+  rm -rf $OPENSHIFT_LOG_DIR/jbossas.log*
   rm -rf $OPENSHIFT_JBOSSAS_DIR/standalone/tmp/*
 }
 
