--- a/cartridges/openshift-origin-cartridge-jbosseap/bin/control
+++ b/cartridges/openshift-origin-cartridge-jbosseap/bin/control
@@ -353,7 +353,7 @@ function reload() {
 function tidy() {
   client_message "Emptying jbosseap logs in dir: $OPENSHIFT_LOG_DIR"
   shopt -s dotglob
-  rm -rf $OPENSHIFT_LOG_DIR/jbosseap*
+  rm -rf $OPENSHIFT_LOG_DIR/jbosseap.log*
   rm -rf $OPENSHIFT_JBOSSEAP_DIR/standalone/tmp/* 
 }
 
