--- a/cartridges/openshift-origin-cartridge-jenkins/bin/control
+++ b/cartridges/openshift-origin-cartridge-jenkins/bin/control
@@ -122,9 +122,9 @@ function reload() {
 
 # Clean up any log files
 function tidy() {
-  client_message "Emptying log dir: $OPENSHIFT_JENKINS_LOG_DIR"
+  client_message "Deleting jenkins logs from $OPENSHIFT_LOG_DIR"
   shopt -s dotglob
-  rm -rf $OPENSHIFT_JENKINS_LOG_DIR/*
+  rm -rf $OPENSHIFT_LOG_DIR/jenkins.log*
 }
 
 # Update the broker host and current system builder credentials
