--- a/cartridges/openshift-origin-cartridge-nodejs/bin/control
+++ b/cartridges/openshift-origin-cartridge-nodejs/bin/control
@@ -257,7 +257,7 @@ function pre-repo-archive() {
 function tidy() {
   client_message "Emptying nodejs logs in dir: $OPENSHIFT_LOG_DIR"
   shopt -s dotglob
-  rm -rf $OPENSHIFT_NODEJS_LOG_DIR/nodejs*
+  rm -rf $OPENSHIFT_LOG_DIR/nodejs.log*
   rm -rf ${OPENSHIFT_NODEJS_DIR}tmp/*
 }
 
