--- a/cartridges/openshift-origin-cartridge-perl/bin/control
+++ b/cartridges/openshift-origin-cartridge-perl/bin/control
@@ -59,7 +59,7 @@ function status() {
 function tidy() {
   client_message "Emptying perl logs in dir: $OPENSHIFT_LOG_DIR"
   shopt -s dotglob
-  rm -rf $OPENSHIFT_PERL_LOG_DIR/perl*
+  rm -rf $OPENSHIFT_LOG_DIR/perl.log*
 }
 
 case "$1" in
