--- a/cartridges/openshift-origin-cartridge-phpmyadmin/bin/control
+++ b/cartridges/openshift-origin-cartridge-phpmyadmin/bin/control
@@ -54,7 +54,7 @@ function status {
 function tidy() {
   client_message "Emptying phpmyadmin logs in dir: $OPENSHIFT_LOG_DIR"
   shopt -s dotglob
-  rm -rf $OPENSHIFT_PHPMYADMIN_LOG_DIR/phpmyadmin*
+  rm -rf $OPENSHIFT_LOG_DIR/phpmyadmin.log*
 }
 
 case "$1" in
