--- a/cartridges/openshift-origin-cartridge-python/usr/versions/shared/bin/control
+++ b/cartridges/openshift-origin-cartridge-python/usr/versions/shared/bin/control
@@ -115,7 +115,7 @@ function status() {
 function tidy() {
     client_message "Emptying python logs in dir: $OPENSHIFT_LOG_DIR"
     shopt -s dotglob
-    rm -rf $OPENSHIFT_LOG_DIR/python*
+    rm -rf $OPENSHIFT_LOG_DIR/python.log*
 }
 
 function build() {
