--- a/cartridges/openshift-origin-cartridge-php/bin/control
+++ b/cartridges/openshift-origin-cartridge-php/bin/control
@@ -43,9 +43,14 @@ function reload() {
 function restart() {
     echo "Restarting PHP ${OPENSHIFT_PHP_VERSION} cartridge (Apache+mod_php)"
     pre_start_httpd_config
-    ensure_httpd_restart_succeed "$HTTPD_PID_FILE" "$HTTPD_CFG_FILE"
-    httpd_pid=`cat "$HTTPD_PID_FILE" 2> /dev/null`
-    kill -HUP $httpd_pid
+    if [ -f "$HTTPD_PID_FILE" ]; then
+        ensure_httpd_restart_succeed "$HTTPD_PID_FILE" "$HTTPD_CFG_FILE"
+        httpd_pid=`cat "$HTTPD_PID_FILE" 2> /dev/null`
+        kill -HUP $httpd_pid
+    else
+        start
+    fi
+
     return $?
 }
 
