--- a/cartridges/openshift-origin-cartridge-phpmyadmin/bin/control
+++ b/cartridges/openshift-origin-cartridge-phpmyadmin/bin/control
@@ -34,8 +34,12 @@ function stop {
 function restart {
   echo "Restarting PHPMyAdmin cartridge"
   write_httpd_passenv $HTTPD_PASSENV_FILE
-  httpd_pid=`cat "$HTTPD_PID_FILE" 2> /dev/null`
-  kill -HUP $httpd_pid
+  if [ -f "$HTTPD_PID_FILE" ]; then
+    httpd_pid=`cat "$HTTPD_PID_FILE" 2> /dev/null`
+    kill -HUP $httpd_pid
+  else
+    start
+  fi
 }
 
 function status {
