--- a/cartridges/openshift-origin-cartridge-haproxy/bin/control
+++ b/cartridges/openshift-origin-cartridge-haproxy/bin/control
@@ -298,6 +298,11 @@ function update-cluster() {
 # main():
 #
 
+function tidy() {
+  client_message "Emptying haproxy logs in dir: $OPENSHIFT_LOG_DIR"
+  shopt -s dotglob
+  rm -rf $OPENSHIFT_LOG_DIR/haproxy.log*
+}
 
 if ! [ -f ${OPENSHIFT_HAPROXY_DIR}/conf/haproxy.cfg ]; then
   client_error "HAProxy required configuration file \"$(basename $f)\" not found."
@@ -315,4 +320,5 @@ case "$1" in
     disable-server) disable-server "$@" ;;
     enable-server)  enable-server  "$@" ;;
     update-cluster) update-cluster "$@" ;;
+    tidy)      tidy ;;
 esac
